--- a/vuejs/src/assets/base.css
+++ b/vuejs/src/assets/base.css
@@ -1,5 +1,4 @@
-/* color palette from <https://github.com/vuejs/theme> */
-:root {
+/* :root {
     --vt-c-white: #ffffff;
     --vt-c-white-soft: #f8f8f8;
     --vt-c-white-mute: #f2f2f2;
@@ -21,7 +20,6 @@
     --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
 }
 
-/* semantic color variables for this project */
 :root {
     --color-background: var(--vt-c-white);
     --color-background-soft: var(--vt-c-white-soft);
@@ -36,7 +34,7 @@
     --section-gap: 160px;
 }
 
-/* @media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
     :root {
         --color-background: var(--vt-c-black);
         --color-background-soft: var(--vt-c-black-soft);
@@ -48,7 +46,7 @@
         --color-heading: var(--vt-c-text-dark-1);
         --color-text: var(--vt-c-text-dark-2);
     }
-} */
+}
 
 *,
 *::before,
@@ -70,4 +68,4 @@ body {
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-}
+} */
